[workspace]
resolver = "2"

members = [
    "examples/gallery",
    "examples/hello",
    "forms",
    "forms_build",
]

[workspace.dependencies]
widestring = "1.0.2"
static_assertions = "1.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
windows = "0.61.1"
windows-sys = "0.59.0"
tokio = "1.45.0"
