[package]
name = "forms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
widestring.workspace = true
log.workspace = true
static_assertions.workspace = true

[dependencies.tokio]
workspace = true
optional = true
features = ["rt"]

[dependencies.windows]
workspace = true
features = [
    #"alloc",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_Controls",
    "Win32_UI_Controls_Dialogs",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]

[dev-dependencies]
env_logger.workspace = true
