[package]
name = "forms2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
widestring = "0.5.1"
log = "0.4.14"
static_assertions = "1.0"

[dependencies.windows]
version = "0.29"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_Controls",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]

[dev-dependencies]
env_logger = "0.9.0"
