[package]
name = "trace_view"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
forms = { path = "../../forms" }
env_logger = "0.9.0"
log = "0.4.14"
trace_reader = { path = "d:/ES.Build.RustTools/src/trace_reader" }
regex = "1.5.4"
reqwest = "0.11.9"
tool_parser = { path = "d:/ES.Build.RustTools/src/tool_parser" }
